--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,4 +1,4 @@
-<%- include('header', {css: 'style', homeActive: '', termsActive: '', aboutActive: 'active', contactActive: ''}) %>
+<%- include('header', {title: 'SharePad - About Us', css: 'style', homeActive: '', termsActive: '', aboutActive: 'active', contactActive: ''}) %>
     <div class="contents">
         <h1>SharePad</h1>
         <h2>About Us</h2>
