Add css for 404 page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,6 +48,10 @@ a.active{
     color: rgb(228, 228, 227);
 }
 
+.header a{
+    text-decoration: underline;
+}
+
 form {
     width: 30vw;
     margin: 20vh 35vw 5vh 35vw;
