--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,7 +78,7 @@ input{
     border: none;
     outline: none;
     box-shadow: inset 0 -1px 0 0 black;
-    margin-bottom: 1vw;
+    margin-bottom: 2vw;
     color: rgb(228, 228, 227)
 }
 
@@ -87,7 +87,7 @@ input::placeholder {
 }
 
 button{
-    font-size: 1.2rem;
+    font-size: 20px;
     background-color: rgb(228, 228, 227);
     color: rgb(237, 120, 237);
     border-radius: 5px;
@@ -135,4 +135,78 @@ footer{
     margin: 2vw 0 0;
     color: rgba(228, 228, 227, 0.8);
     text-align: center;
+}
+
+@media screen and (max-width: 900px){
+    .header{
+        width: 50vw;
+        margin: 20vh 25vw 10vh 25vw;
+    }
+
+    form{
+        width: 50vw;
+        margin: 10vh 25vw 5vh 25vw;
+    }
+
+    nav{
+        width: 40vw;
+    }
+}
+
+@media screen and (max-width: 600px){
+    .header{
+        width: 60vw;
+        margin: 20vh 20vw 10vh 20vw;
+    }
+
+    form{
+        width: 60vw;
+        margin: 10vh 20vw 5vh 20vw;
+    }
+
+    nav{
+        width: 60vw;
+    }
+}
+
+@media screen and (max-width: 460px){
+    .header{
+        width: 80vw;
+        margin: 20vh 10vw 10vh 10vw;
+    }
+
+    form{
+        width: 80vw;
+        margin: 10vh 10vw 5vh 10vw;
+    }
+
+    nav{
+        width: 80vw;
+    }
+
+    input{
+        margin-bottom: 4vw;
+    }
+}
+
+@media screen and (max-width: 350px){
+    .header{
+        margin: 20vh 10vw 5vh 10vw;
+    }
+
+    form{
+        margin: 5vh 5vw 4vh 10vw;
+    }
+
+    .header p{
+        font-size: 18px;
+    }
+    
+    form div{
+        font-size: 16px;
+    }
+    
+    label {
+        font-size: 18px;
+    }
 }
