--- a/views/unlock.ejs
+++ b/views/unlock.ejs
@@ -1,4 +1,4 @@
-<%- include('header', {title: 'Unlock SharePad - '+name, css: 'style', homeActive: '', termsActive: '', aboutActive: '', contactActive: ''}) %>
+<%- include('header', {title: 'Unlock SharePad - '+name, css: 'style', homeActive: '', termsActive: '', aboutActive: '', contactActive: '', adsenseClientId}) %>
     <div class="header">
         <h1>SharePad</h1>
         <p>Enter the password for SharePad <i><%=name%></i></p>
