Remove unnecessary code

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,4 +1,4 @@
-<%- include('header', {title: 'SharePad Not Found', css: 'style', homeActive: '', termsActive: '', aboutActive: '', contactActive: '', adsenseClientId}) %>
+<%- include('header', {title: 'SharePad Not Found', css: 'style', homeActive: '', termsActive: '', aboutActive: '', contactActive: ''}) %>
     <div class="header">
         <h1>Sharepad Not Found</h1>
         <p>The Sharepad you are trying to access either does not exist or has expired.</p>
