--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<%- include('header', {title: 'SharePad', css: 'style', homeActive: 'active', termsActive: '', aboutActive: '', contactActive: '', adsenseClientId}) %>
+<%- include('header', {title: 'SharePad', css: 'style', homeActive: 'active', termsActive: '', aboutActive: '', contactActive: ''}) %>
   <div class="header">
     <h1>SharePad</h1>
     <p>Create a new notepad and share it with anyone</p>
