--- a/views/notepad.ejs
+++ b/views/notepad.ejs
@@ -1,4 +1,4 @@
-<%- include('header', {title: 'SharePad - '+name, css: 'notepad', homeActive: '', termsActive: '', aboutActive: '', contactActive: '', adsenseClientId}) %>
+<%- include('header', {title: 'SharePad - '+name, css: 'notepad', homeActive: '', termsActive: '', aboutActive: '', contactActive: ''}) %>
   <div class="content">
     <h1>SharePad</h1>
     <div class="details">
