--- a/views/terms.ejs
+++ b/views/terms.ejs
@@ -1,4 +1,4 @@
-<%- include('header', {title: 'SharePad - Terms', css: 'style', homeActive: '', termsActive: 'active', aboutActive: '', contactActive: '', adsenseClientId}) %>
+<%- include('header', {title: 'SharePad - Terms', css: 'style', homeActive: '', termsActive: 'active', aboutActive: '', contactActive: ''}) %>
     <div class="contents">
         <h1>SharePad</h1>
         <h2>Terms and Conditions</h2>
