--- a/views/notepad.ejs
+++ b/views/notepad.ejs
@@ -2,7 +2,7 @@
   <div class="content">
     <h1>SharePad</h1>
     <div class="details">
-      <div>Notepad name: <span><%= name %></span></div>
+      <div>SharePad name: <span><%= name %></span></div>
       <div>Expiry: <span><%= expiry %></span></div>
     </div>
   </div>
