Fix issue with save functionality

--- a/views/notepad.ejs
+++ b/views/notepad.ejs
@@ -29,9 +29,8 @@
     </select>
   </div>
   <br>
-  <form action="/<%=name%>" method="post">
+  <form action="/<%= name %>" method="post">
     <textarea id="editor" name="notepad" contenteditable="true"><%=content%></textarea>
-    <button type="submit">Save</button>
+    <button type="submit" name="save" value="true">Save</button>
   </form>
-  <script src="/js/script.js"></script>
 <%- include('footer') %>
