--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/png" href="/images/sharepad.png">
   <link rel="stylesheet" href="/css/<%= css %>.css">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4021415441886717" crossorigin="anonymous"></script>
   <title><%=title%></title>
 </head>
 <body>
