--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,4 +1,4 @@
-<%- include('header', {title: 'SharePad - COntact Us', css: 'style', homeActive: '', termsActive: '', aboutActive: '', contactActive: 'active'}) %>
+<%- include('header', {title: 'SharePad - Contact Us', css: 'style', homeActive: '', termsActive: '', aboutActive: '', contactActive: 'active'}) %>
     <div class="contents">
         <h1>SharePad</h1>
         <h2>Contact Us</h2>
