--- a/views/notepad.ejs
+++ b/views/notepad.ejs
@@ -29,8 +29,8 @@
     </select>
   </div>
   <br>
-  <form>
+  <section>
     <div id="editor" name="notepad" contenteditable="true"><%=content%></div>
-  </form>
+  </section>
   <script src="/js/script.js"></script>
 <%- include('footer') %>
