--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,8 @@
-<%- include('header', {title: 'SharePad', css: 'style', homeActive: 'active', termsActive: '', aboutActive: '', contactActive: ''}) %>
+<%- include('header', {title: 'SharePad - The Collaborative Text Editor', css: 'style', homeActive: 'active', termsActive: '', aboutActive: '', contactActive: ''}) %>
   <div class="header">
     <h1>SharePad</h1>
-    <p>Create a new notepad and share it with anyone</p>
+    <h2>The Collaborative Text Editor</h2>
+    <h3>Create a new notepad and share it with anyone</h3>
   </div>
   <form action="/" method="POST">
     <p class="error"><%=error%></p>
