Minor text change

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,7 +1,7 @@
 <%- include('header', {title: 'SharePad Not Found', css: 'style', homeActive: '', termsActive: '', aboutActive: '', contactActive: ''}) %>
     <div class="header">
-        <h1>Sharepad Not Found</h1>
-        <p>The Sharepad you are trying to access either does not exist or has expired.</p>
+        <h1>SharePad Not Found</h1>
+        <p>The SharePad you are trying to access either does not exist or has expired.</p>
         <p>Please check the URL or <a href="/">return to the homepage</a>.</p>
     </div>
 </body>
