--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -2,7 +2,7 @@
     <div class="contents">
         <h1>SharePad</h1>
         <h2>Contact Us</h2>
-        <p>If you have any questions, concerns, or feedback about SharePad, please don't hesitate to reach out to us. You can contact us via email at support@sharepad.com, and we'll do our best to get back to you as soon as possible.</p>
+        <p>If you have any questions, concerns, or feedback about SharePad, please don't hesitate to reach out to us. You can contact us via email at <a href="mailto:support@sharepad.online">support@sharepad.online</a>, and we'll do our best to get back to you as soon as possible.</p>
         <p>If you're experiencing any technical issues with the site, please include as much detail as possible in your email, including your browser type and version, any error messages you're seeing, and the steps you took to encounter the issue. This will help us troubleshoot the problem more efficiently.</p>
         <p>We're also open to any suggestions or feature requests you may have for SharePad. We're constantly striving to improve the user experience and make the site more useful for our users, so we welcome any and all feedback.</p>
         <p>Additionally, you can follow and contact the developer of SharePad on the following social media platforms:</p>
