Add meta description

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Boost your productivity with SharePad - the web-based notepad with advanced formatting options like font size, style, and more. Collaborate with others in real-time and streamline your work. Try SharePad now!">
   <link rel="shortcut icon" type="image/png" href="/images/sharepad.png">
   <link rel="stylesheet" href="/css/<%= css %>.css">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4021415441886717" crossorigin="anonymous"></script>
