fix: Resolve issue with rendering html content

--- a/views/notepad.ejs
+++ b/views/notepad.ejs
@@ -30,7 +30,7 @@
   </div>
   <br>
   <section>
-    <div id="editor" name="notepad" contenteditable="true"><%=content%></div>
+    <div id="editor" name="notepad" contenteditable="true"><%-content%></div>
   </section>
   <script src="/js/script.js"></script>
 <%- include('footer') %>
