Add AdsTerra code

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,3 +1,14 @@
+<script type='text/javascript' src='//pl19467156.highrevenuegate.com/dd/ef/61/ddef619fb681f0d2bc5380b224b64a73.js'></script>
+<script type="text/javascript">
+	atOptions = {
+		'key' : '05c4d7b81feda23fc3dd06d83aa188d5',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type=`text/javascript` src=`http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/05c4d7b81feda23fc3dd06d83aa188d5/invoke.js`></scr' + 'ipt>');
+</script>
 </body>
 <footer>
     &#169; 2023 Pratham Jaiswal
