--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,3 +1,8 @@
+<div class="side-ads">
+	<a class="s160" href="https://publishers.adsterra.com/referral/73iZUJAXWa"><img alt="banner" src="https://landings-cdn.adsterratech.com/referralBanners/png/160%20x%20600%20px.png" /></a>
+	<a class="s120" href="https://publishers.adsterra.com/referral/73iZUJAXWa"><img alt="banner" src="https://landings-cdn.adsterratech.com/referralBanners/png/120%20x%20600%20px.png" /></a>
+</div>
+
 <script type='text/javascript' src='//pl19467156.highrevenuegate.com/dd/ef/61/ddef619fb681f0d2bc5380b224b64a73.js'></script>
 <script type="text/javascript">
 	atOptions = {
@@ -13,4 +18,9 @@
 <footer>
     &#169; 2023 Pratham Jaiswal
 </footer>
+<div class="adsterra">
+	<iframe class="b728" src="//www.profitabledisplaynetwork.com/watchnew?key=05c4d7b81feda23fc3dd06d83aa188d5" width="728" height="90" frameborder="0" scrolling="no"></iframe>
+	<iframe class="b468" src="//www.profitabledisplaynetwork.com/watchnew?key=29026ef97a47211efc0831cef2e11f075" width="468" height="60" frameborder="0" scrolling="no"></iframe>
+	<iframe class="b320" src="//www.profitabledisplaynetwork.com/watchnew?key=8be76567a9ee1dce38b4aa0682bc647b" width="320" height="50" frameborder="0" scrolling="no"></iframe>
+</div>
 </html>
