--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,7 +11,9 @@
   <title><%=title%></title>
 </head>
 <body>
+  
   <nav>
+    <li><a href="https://publishers.adsterra.com/referral/73iZUJAXWa"><img alt="banner" src="https://landings-cdn.adsterratech.com/referralBanners/png/80%20x%2030%20px.png" /></a></li>
     <li><a href="/" class="<%= homeActive %>">Home</a></li>
     <li><a href="/terms" class="<%= termsActive %>">Terms</a></li>
     <li><a href="/about" class="<%= aboutActive %>">About</a></li>
