--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,7 @@ nav{
     position: fixed;
     top: 2vh;
     right: 0;
-    width: 30vw;
+    width: 45vw;
     display: flex;
     justify-content: space-evenly;
 }
@@ -35,7 +35,7 @@ a.active{
 
 .header{
     width: 30vw;
-    margin: 20vh 35vw 10vh 35vw;
+    margin: 15vh 35vw 5vh 35vw;
     text-align: center;
 }
 
@@ -54,7 +54,7 @@ a.active{
 
 form{
     width: 30vw;
-    margin: 20vh 35vw 5vh 35vw;
+    margin: 5vh 35vw 5vh 35vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -131,8 +131,47 @@ button:hover{
     color: red;
 }
 
+.adsterra{
+    display: flex;
+    justify-content: center;
+}
+
+iframe{
+    position: fixed;
+    bottom: 0;
+}
+
+.b728{
+    display: inline;
+}
+
+.b468, .b320{
+    display: none;
+}
+
+.side-ads{
+    position: fixed;
+    display: flex;
+    font-display: column;
+    top: 0;
+    left: 0;
+    height: 100vw;
+}
+
+.side-ads a{
+    margin: 10vh 0;
+}
+
+.s160{
+    display: inline;
+}
+
+.s120{
+    display: none;
+}
+
 footer{
-    margin: 2vw 0 0;
+    margin: 2vh 0 15vh;
     color: rgba(228, 228, 227, 0.8);
     text-align: center;
 }
@@ -140,20 +179,40 @@ footer{
 @media screen and (max-width: 900px){
     .header{
         width: 50vw;
-        margin: 20vh 25vw 10vh 25vw;
+        margin: 10vh 25vw 5vh 25vw;
     }
 
     form{
         width: 50vw;
-        margin: 10vh 25vw 5vh 25vw;
+        margin: 5vh 25vw 5vh 25vw;
     }
 
     nav{
-        width: 40vw;
+        width: 55vw;
+    }
+    
+    .b468{
+        display: inline;
+    }
+    
+    .b728, .b320{
+        display: none;
+    }
+
+    .s120{
+        display: inline;
+    }
+    
+    .s160{
+        display: none;
     }
 }
 
 @media screen and (max-width: 600px){
+    .s160, .s120{
+        display: none;
+    }
+
     .header{
         width: 60vw;
         margin: 20vh 20vw 10vh 20vw;
@@ -165,7 +224,15 @@ footer{
     }
 
     nav{
-        width: 60vw;
+        width: 75vw;
+    }
+    
+    .b320{
+        display: inline;
+    }
+    
+    .b728, .b468{
+        display: none;
     }
 }
 
@@ -181,7 +248,7 @@ footer{
     }
 
     nav{
-        width: 80vw;
+        width: 90vw;
     }
 
     input{
@@ -190,6 +257,10 @@ footer{
 }
 
 @media screen and (max-width: 350px){
+    nav{
+        width: 100vw;
+    }
+    
     .header{
         margin: 20vh 10vw 5vh 10vw;
     }
