Add Ads on right side

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,7 +1,13 @@
-<div class="side-ads">
-	<a class="s160" href="https://publishers.adsterra.com/referral/73iZUJAXWa"><img alt="banner" src="https://landings-cdn.adsterratech.com/referralBanners/png/160%20x%20600%20px.png" /></a>
+<div class="left-side-ads">
+	<iframe class="s160" src="//www.profitabledisplaynetwork.com/watchnew?key=bceb01e4968361a61acda74bebcc7d8c" width="160" height="600" frameborder="0" scrolling="no"></iframe>
 	<a class="s120" href="https://publishers.adsterra.com/referral/73iZUJAXWa"><img alt="banner" src="https://landings-cdn.adsterratech.com/referralBanners/png/120%20x%20600%20px.png" /></a>
 </div>
+
+<div class="right-side-ads">
+	<iframe class="s160" src="//www.profitabledisplaynetwork.com/watchnew?key=bceb01e4968361a61acda74bebcc7d8c" width="160" height="600" frameborder="0" scrolling="no"></iframe>
+	<a class="s120" href="https://publishers.adsterra.com/referral/73iZUJAXWa"><img alt="banner" src="https://landings-cdn.adsterratech.com/referralBanners/png/120%20x%20600%20px.png" /></a>
+</div>
+
 </body>
 <footer>
     &#169; 2023 Pratham Jaiswal
