Add download button

--- a/views/notepad.ejs
+++ b/views/notepad.ejs
@@ -27,6 +27,7 @@
       <option value="6">24 pt</option>
       <option value="7">36 pt</option>
     </select>
+    <button id="downloadButton" title="Download" onclick="saveDoc()">Download</button>
   </div>
   <br>
   <section>
