--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,11 +2,11 @@
     <div class="contents">
         <h1>SharePad</h1>
         <h2>About Us</h2>
-        <p>Welcome to SharePad! SharePad is a simple and secure online notepad that allows you to easily share text and related content with others. SharePad offers a range of editing features such as font, size, bold, italics, underline, and strikethrough to enhance your writing experience. Our goal is to provide a fast, reliable, and secure platform for sharing information, without the need for databases, cookies, or user accounts.</p>
+        <p>Welcome to SharePad! SharePad is a simple and secure online notepad that allows you to easily share text and related content with others. SharePad offers a range of editing features such as font, size, bold, italics, underline, and strikethrough to enhance your writing experience. Our goal is to provide a fast, reliable, and secure platform for sharing information, without the need for user accounts.</p>
         <p>When you land on the SharePad website, you are prompted to enter a unique string of at least 6 characters, and an optional password meeting the same criteria. This input is then used to create a new route, which will lead you to a private notepad where you can start sharing your content with trusted individuals.</p>
         <p>The best part about SharePad is that there is no need to register, log in, or provide any personal information. Anyone with the unique route and optional password can view and modify the contents in the notepad for up to 24 hours after the last access. This makes sharing text and related content easier than ever before.</p>
-        <p>At SharePad, we believe in simplicity and security. Therefore, we do not use any database or cookies, and no permission is required to use our service. Our mission is to provide a hassle-free platform where you can share your ideas, collaborate with others, and make your content accessible to a wider audience.</p>
-        <p>SharePad was created by Pratham Jaiswal, a student based in India. If you have any questions or feedback, please don't hesitate to <a href="/contact">contact us</a>.</p>
+        <p>Our mission is to provide a hassle-free platform where you can share your ideas, collaborate with others, and make your content accessible to a wider audience.</p>
+        <p>SharePad was created by Pratham Jaiswal, a student of Vellore Institute of Technology, Chennai, India. If you have any questions or feedback, please don't hesitate to <a href="/contact">contact us</a>.</p>
         <p>Thank you for choosing SharePad, and we hope you enjoy using our service!</p>
     </div>
 <%- include('footer') %>
