--- a/views/terms.ejs
+++ b/views/terms.ejs
@@ -13,7 +13,7 @@
             <li>You acknowledge that you are solely responsible for maintaining the confidentiality of your notepad's URL and password.</li>
             <li>You understand that anyone with the URL and password to your notepad can view and modify its contents, and you agree to share these only with trusted individuals.</li>
             <li>You agree that SharePad is provided "as is," and we make no guarantees or warranties as to its availability, reliability, or security. We reserve the right to suspend or terminate your access to SharePad at any time without notice, for any reason.</li>
-            <li>You acknowledge that SharePad does not store any of your personal data or the content you create on our servers. However, we may reset the server at any time, which will result in the permanent deletion of all notepads and content stored on SharePad. Therefore, you are solely responsible for maintaining your own backups of your notepad's contents.</li>
+            <li>You acknowledge that SharePad does not store any of your personal data. However, we may reset the server at any time, which will result in the permanent deletion of all notepads and content stored on SharePad. Therefore, you are solely responsible for maintaining your own backups of your notepad's contents.</li>
         </ol>
         <p>If you do not agree to these terms and conditions, you must not use SharePad.</p>
     </div>
