--- a/views/header.ejs
+++ b/views/header.ejs
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" type="image/png" href="/images/sharepad.png">
   <link rel="stylesheet" href="/css/<%= css %>.css">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4021415441886717" crossorigin="anonymous"></script>
+  <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="maxxdevs" data-description="Support me on Buy me a coffee!" data-message="" data-color="#BD5FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
   <title><%=title%></title>
 </head>
 <body>
