Add current year

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,5 +1,5 @@
 </body>
 <footer>
-    &#169; 2023 Pratham Jaiswal
+    &#169; 2023-<%= new Date().getFullYear() %> Pratham Jaiswal
 </footer>
 </html>
