--- a/views/header.ejs
+++ b/views/header.ejs
@@ -7,7 +7,8 @@
   <meta name="description" content="Boost your productivity with SharePad - the web-based notepad with advanced formatting options like font size, style, and more. Collaborate with others in real-time and streamline your work. Try SharePad now!">
   <link rel="shortcut icon" type="image/png" href="/images/sharepad.png">
   <link rel="stylesheet" href="/css/<%= css %>.css">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4021415441886717" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+  <script src="https://kit.fontawesome.com/6f42fc440c.js" crossorigin="anonymous"></script>
   <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="maxxdevs" data-description="Support me on Buy me a coffee!" data-message="" data-color="#BD5FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
   <title><%=title%></title>
 </head>
