Just code formatting

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,35 @@
-<%- include('header', {title: 'SharePad - The Collaborative Text Editor', css: 'style', homeActive: 'active', termsActive: '', aboutActive: '', contactActive: ''}) %>
-  <div class="header">
-    <h1>SharePad</h1>
-    <h2>The Collaborative Text Editor</h2>
-    <h3>Create a new notepad and share it with anyone</h3>
+<%- include('header', {title: 'SharePad - The Collaborative Text Editor', css:
+'style', homeActive: 'active', termsActive: '', aboutActive: '', contactActive:
+''}) %>
+<div class="header">
+  <h1>SharePad</h1>
+  <h2>The Collaborative Text Editor</h2>
+  <h3>Create a new notepad and share it with anyone</h3>
+</div>
+<form class="home-form" action="/" method="POST" autocomplete="off">
+  <p class="error"></p>
+  <label for="noteName">Enter notepad name:</label>
+  <div>
+    <%= req.protocol + '://' + req.get('host') + req.originalUrl %><input
+      type="text"
+      id="noteName"
+      name="noteName"
+      minlength="6"
+      placeholder="sharepad"
+      autocomplete="off"
+      required
+    />
   </div>
-  <form action="/" method="POST">
-    <p class="error"><%=error%></p>
-    <label for="noteName">Enter notepad name:</label>
-    <div>
-      <%= req.protocol + '://' + req.get('host') + req.originalUrl %><input type="text" id="noteName" name="noteName" minlength="6" placeholder="sharepad" required>
-    </div>
-    <div>
-      <label for="password">Password (optional):</label>
-      <input type="password" id="password" name="password" minlength="6">
-    </div>
-    <button type="submit">Create</button>
-  </form>
+  <div>
+    <label for="password">Password (optional):</label>
+    <input
+      type="password"
+      id="password"
+      name="password"
+      minlength="6"
+      autocomplete="off"
+    />
+  </div>
+  <button type="submit">Create</button>
+</form>
 <%- include('footer') %>
