--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -7,6 +7,7 @@
     <div id="status-message"></div>
     <input type="text" name="user_name" placeholder="Name" required />
     <input type="email" name="user_email" placeholder="Email" required />
+    <input type="email" name="app_name" value="SharePad" disabled hidden />
     <textarea
       placeholder="Message"
       cols="30"
