--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="Enhance your productivity with SharePad! It offers advanced formatting options such as font size, styles, and more. Give SharePad a try today!">
+  <meta name="keywords" content="SharePad, text editor, online notepad, notepad, shareable text editor, shareable notepad">
+  <meta name="author" content="Pratham Jaiswal">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Boost your productivity with SharePad - the web-based notepad with advanced formatting options like font size, style, and more. Collaborate with others in real-time and streamline your work. Try SharePad now!">
   <link rel="shortcut icon" type="image/png" href="/images/sharepad.png">
   <link rel="stylesheet" href="/css/<%= css %>.css">
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
