--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,9 @@
-<%- include('header', {title: 'SharePad - The Collaborative Text Editor', css:
+<%- include('header', {title: 'SharePad - The Shareable Text Editor', css:
 'style', homeActive: 'active', termsActive: '', aboutActive: '', contactActive:
 ''}) %>
 <div class="header">
   <h1>SharePad</h1>
-  <h2>The Collaborative Text Editor</h2>
+  <h2>The Shareable Text Editor</h2>
   <h3>Create a new notepad and share it with anyone</h3>
 </div>
 <form class="home-form" action="/" method="POST" autocomplete="off">
