--- a/views/header.ejs
+++ b/views/header.ejs
@@ -14,7 +14,16 @@
   <title><%=title%></title>
 </head>
 <body>
-  
+  <a
+    href="https://www.patreon.com/bePatron?u=109627851"
+    target="_blank"
+    rel="noopener"
+    id="floating-patreon-btn"
+    data-patreon-widget-type="become-patron-button"
+    area-label="Become a Patron on Patreon"
+  >
+    <img width="20px" src="https://res.cloudinary.com/dhzmockpa/image/upload/v1745674680/PATREON_SYMBOL_1_BLACK_RGB_trsdty.svg" alt="Become a Patron on Patreon" />
+  </a>
   <nav>
     <li><a href="/" class="<%= homeActive %>">Home</a></li>
     <li><a href="/terms" class="<%= termsActive %>">Terms</a></li>
